...
  <string name="menu_home">Home</string>
  <string name="menu_options">Options</string>
  <string name="menu_my_downloads">My Downloads</string>
  <string name="menu_help">Help</string>
  <string name="menu_switch_profile">Switch Profile</string>
  <string name="administrator_controls">Administrator Controls</string>
  <string name="drawer_open_content_description">Navigation Menu Open</string>
  <string name="drawer_close_content_description">Navigation Menu Close</string>
  <string name="welcome_text">Welcome to Oppia!</string>
  <string name="welcome_back_text">Welcome back to Oppia!</string>
  <string name="audio_play_description">Play audio</string>
  <string name="audio_pause_description">Pause audio</string>
  <string name="audio_language_select_dialog_okay_button">OK</string>
...
  <string name="see_more">See More</string>
  <string name="see_less">See Less</string>
  <string name="FAQs">FAQs</string>
  <string name="featured_questions">Featured Questions</string>
  <string name="frequently_asked_questions">Frequently Asked Questions</string>
  <string name="faq_activity_label">FAQs (Frequently Asked Questions)</string>
  <string name="frequently_asked_questions_FAQ">Frequently Asked Questions (FAQs)</string>
  <string name="info">Info</string>
  <string name="lessons">Lessons</string>
  <string name="practice">Practice</string>
  <string name="revision">Revision</string>
  <string name="topic_page">Topic page</string>
  <string name="topic_name">Topic: %s</string>
...
